--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<a class="nav-link" href="http://ec2-3-22-248-106.us-east-2.compute.amazonaws.com:8080/">Heart Disease<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item active">
-							<a class="nav-link" href=r"C:\Users\ATHIKUR S\Downloads\Health-App-main\Kidney_API">Kidney Disease</a>
+							<a class="nav-link" href="https://healthproject-athikur.herokuapp.com/">Kidney Disease</a>
 						</li>
 						<li class="nav-item active">
 							<a class="nav-link" href="http://ec2-3-137-164-7.us-east-2.compute.amazonaws.com:8080/">Diabetes</a>
