--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="collapse navbar-collapse" id="navbarCollapse">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="https://heart-athikur-project.herokuapp.com/">Heart Disease<span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="https://heart-athikur-project.herokuapp.com/">Heart Disease</a>
 						</li>
 						<li class="nav-item active">
 							<a class="nav-link" href="https://healthproject-athikur.herokuapp.com/">Kidney Disease</a>
