--- a/index.html
+++ b/index.html
@@ -26,16 +26,13 @@
 							<a class="nav-link" href="https://heart-athikur-project.herokuapp.com/">Heart Disease</a>
 						</li>
 						<li class="nav-item active">
-							<a class="nav-link" href="https://healthproject-athikur.herokuapp.com/">Kidney Disease</a>
+							<a class="nav-link" href="https://kidney-athikur.herokuapp.com/">Kidney Disease</a>
 						</li>
 						<li class="nav-item active">
-							<a class="nav-link" href="http://ec2-3-137-164-7.us-east-2.compute.amazonaws.com:8080/">Diabetes</a>
+							<a class="nav-link" href="https://diabetes-athikur.herokuapp.com/">Diabetes</a>
 						</li>
 						<li class="nav-item active">
-							<a class="nav-link" href="http://ec2-3-128-189-239.us-east-2.compute.amazonaws.com:8080/">Liver Diease</a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="http://ec2-3-128-179-78.us-east-2.compute.amazonaws.com:8080/">Cancer</a>
+							<a class="nav-link" href="https://liver-athikur.herokuapp.com/">Liver Diease</a>
 						</li>
 					</ul>
 				</div>
