--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="">
 		<link rel="icon" href="../static/img/health.ico">
 		<title>Health App</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/carousel/">
 		<!-- Bootstrap core CSS -->
 		<link href="../static/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom styles for this template -->
