--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 										<p class="lead">The physical access to hospitals is still the major barrier to both preventive and curative health services, and also the major differences between the Rural and the Urban India. By making use of web technology and AI people in remote areas can also get access to the health-care.</p>
 									</div>
 									<div class="col-md-5 order-md-1">
-										<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" src="../static/img/assess.jpg" alt="Generic placeholder image">
+										<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" src="../static/img/assess.png" alt="Generic placeholder image">
 									</div>
 								</div>
 								<hr class="featurette-divider">
